Sync backend server with ui 1.0
